boulder/tests/compile_fail/attr/on_import.bo
# Cannot apply attribute `hidden` to imports
# (8:

mod inner {
    struct A;
}

@hidden
use inner::A;